# resume_api

./: main.py  pyproject.toml  requirements.txt
app/: main.py  test.py
app/api/v1/: routes_job_match.py  routes_resume.py
app/core/: config.py  rate_limit.py  security.py
app/db/: init_db.py  models.py
app/models/: schemas.py
app/services/: job_matcher.py  resume_parser.py
